prevent content overflow

--- a/_sass/_js_flip_book.scss
+++ b/_sass/_js_flip_book.scss
@@ -27,6 +27,7 @@ $book-height: 400px !default;
     > div {
       display: block;
       position: absolute;
+      overflow: hidden;
     }
   }
   .book-front {
